[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/art/spells/icons/lightning.png" type="Texture" id=1]
[ext_resource path="res://assets/gui/theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/art/gui/discard_spell.png" type="Texture" id=3]
[ext_resource path="res://assets/art/gui/spell_slot.png" type="Texture" id=4]
[ext_resource path="res://assets/scripts/gui/spell_select_gui.gd" type="Script" id=5]

[node name="SpellSelectGUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.294118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = 32.0
margin_right = -48.0
margin_bottom = -32.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Container"]
margin_right = 224.0
margin_bottom = 12.0
text = "Choose a slot to put your spell:"
align = 1

[node name="Spell1" type="Button" parent="Container"]
margin_top = 16.0
margin_right = 224.0
margin_bottom = 40.0
size_flags_vertical = 3

[node name="Container" type="HBoxContainer" parent="Container/Spell1"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Container/Spell1/Container"]
margin_left = 68.0
margin_top = 6.0
margin_right = 100.0
margin_bottom = 18.0
text = "Slot 1: "

[node name="Slot" type="TextureRect" parent="Container/Spell1/Container"]
margin_left = 104.0
margin_top = 7.0
margin_right = 114.0
margin_bottom = 17.0
size_flags_vertical = 4
texture = ExtResource( 4 )

[node name="Spell" type="TextureRect" parent="Container/Spell1/Container/Slot"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -4.0
margin_right = 4.0
margin_bottom = 4.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpellName" type="Label" parent="Container/Spell1/Container"]
margin_left = 118.0
margin_top = 6.0
margin_right = 156.0
margin_bottom = 18.0
text = "Lightning"

[node name="Spell2" type="Button" parent="Container"]
margin_top = 44.0
margin_right = 224.0
margin_bottom = 68.0
size_flags_vertical = 3

[node name="Container" type="HBoxContainer" parent="Container/Spell2"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Container/Spell2/Container"]
margin_left = 67.0
margin_top = 6.0
margin_right = 101.0
margin_bottom = 18.0
text = "Slot 2: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot" type="TextureRect" parent="Container/Spell2/Container"]
margin_left = 105.0
margin_top = 7.0
margin_right = 115.0
margin_bottom = 17.0
size_flags_vertical = 4
texture = ExtResource( 4 )

[node name="Spell" type="TextureRect" parent="Container/Spell2/Container/Slot"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -4.0
margin_right = 4.0
margin_bottom = 4.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpellName" type="Label" parent="Container/Spell2/Container"]
margin_left = 119.0
margin_top = 6.0
margin_right = 157.0
margin_bottom = 18.0
text = "Lightning"

[node name="Discard" type="Button" parent="Container"]
margin_top = 72.0
margin_right = 224.0
margin_bottom = 96.0
size_flags_vertical = 3

[node name="Container" type="HBoxContainer" parent="Container/Discard"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot" type="TextureRect" parent="Container/Discard/Container"]
margin_left = 76.0
margin_top = 7.0
margin_right = 86.0
margin_bottom = 17.0
size_flags_vertical = 4
texture = ExtResource( 4 )

[node name="Spell" type="TextureRect" parent="Container/Discard/Container/Slot"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -4.0
margin_right = 4.0
margin_bottom = 4.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Container/Discard/Container"]
margin_left = 90.0
margin_top = 6.0
margin_right = 148.0
margin_bottom = 18.0
text = "Discard spell"
[connection signal="pressed" from="Container/Spell1" to="." method="_on_spell_selected" binds= [ 0 ]]
[connection signal="pressed" from="Container/Spell2" to="." method="_on_spell_selected" binds= [ 1 ]]
[connection signal="pressed" from="Container/Discard" to="." method="_on_spell_selected" binds= [ 2 ]]
